# ROS_leggedRobot_testBed

./: README.md  bashrc.txt  start_robot.sh
Arduino/blinking_leds/: blinking_leds.ino
Arduino/buzzer/: buzzer.ino  pitches.h
CAD/: XL-430TTTT.FCStd  basePlate.FCStd  calfJoin.FCStd  calfLinkageRod.FCStd  innerThigh.FCStd  thighConn.FCStd  thighInner.FCStd  thighOuter.FCStd  zAssembly.FCStd  zAssembly1Leg.FCStd
ros2_ws/src/arduino_firmware/: serialTalk_lifecycle.py  serial_publisher.py  serial_receiver.py
ros2_ws/src/firmware/PCA9685controller/: PCA9685controller.ino
ros2_ws/src/firmware/PCA9685controller_MG90Sservo/: PCA9685controller_MG90Sservo.ino
ros2_ws/src/robot_scripts/firmware/: raspPi5_ubuntu_i2c_PCA9685controllerTestChannel0.py
ros2_ws/src/robot_scripts/robot_scripts/: robot_lifecycle.py  test_imports.py
src/cubic_doggo_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/cubic_doggo_moveit_config/config/: cubic_doggo.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/cubic_doggo_moveit_config/launch/: demo.launch.py  move_group.launch.py
src/ma_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ma_robot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  ma_robot.ros2_control.xacro  ma_robot.srdf  ma_robot.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
src/ma_robot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/config/: cubic_doggo_controllers.yaml  ma_robot_controllers.yaml  my_robot_controllers.yaml
src/my_robot_bringup/launch/: cubic_doggo.with_lifecycle.launch.py  ma_robot.gazebo.with_commander.launch.py  ma_robot.launch.py  ma_robot.launch.with_commander.py  ma_robot.with_commander.launch.py  my_robot.gazebo.with_commander.launch.py  my_robot.launch.py  my_robot.with_commander.launch.py  my_robot.with_lifecycle.launch.py
src/my_robot_commander/: CMakeLists.txt  package.xml
src/my_robot_commander/src/: cubic_doggo_lifecycle.cpp  ma_robot_commander.cpp  my_robot_commander.cpp  my_robot_lifecycle.cpp
src/my_robot_description/: CMakeLists.txt
src/my_robot_description/launch/: cubic_doggo.rviz.launch.xacro.py  ma_robot.rviz.launch.xacro.py  my_robot.rviz.launch.xacro.py
src/my_robot_description/mesh/CADv0/: XL-430TTTT-Body.stl  XL-430TTTT.FCStd  XL-430TTTT_mod-Body.stl  XL-430holderBasic.FCStd  _mod_XL-430TTTT.FCStd  _mod_XL-430holderBasic-Body.stl  _mod_XL-430holderBasic.FCStd  _mod_XL-430holderThighBack-Body.stl  _mod_XL-430holderThighBack.FCStd  _mod_XL-430holderThighFront-Body.stl  _mod_XL-430holderThighFront.FCStd  _mod_XL-430rotor.FCStd  _mod_XL-430rotorPadding-Body.stl  _mod_XL-430rotorPadding.FCStd  _mod_basePlate-Body.stl  _mod_basePlate.FCStd  _mod_calfJoint-Body.stl  _mod_calfJoint.FCStd  _mod_thighConn.FCStd  _mod_thighInner-Body.stl  _mod_thighInner.FCStd  _mod_thighOuter-Body.stl  _mod_thighOuter.FCStd  _mod_thighOuter.FCStd_.FCStd  _mod_thighOuter_heatInsert-Body.stl  _mod_thighOuter_heatInsert.FCStd  basePlate-Body.stl  basePlate.FCStd  calfFeet-Body.stl  calfFeet.FCStd  calfJoint-Body.stl  (+10 more)
src/my_robot_description/mesh/CADv0.1/: XL-430holderBasic.FCStd  XL-430rotorPadding.FCStd  XL430holderBasic.FCStd  XL430holderBasic.stl  XL430holderThighBack.stl  XL430holderThighFront.FCStd  XL430holderThighFront.stl  XL430rotorPadding.stl  basePlate.FCStd  basePlate.stl  basePlateConnector.FCStd  basePlateTorsoLower-Body.stl  basePlateTorsoLower.FCStd  basePlateTorsoUpper-Body.stl  basePlateTorsoUpper.FCStd  basePlateTorsoUpper.stl  batteryHolder-Body.stl  batteryHolder.FCStd  calfFeet.FCStd  calfFeet.stl  calfJoint.FCStd  calfJoint.stl  fanFlag-Body.stl  fanFlag.FCStd  thighInner.FCStd  thighInner.stl  thighOuter.FCStd  thighOuter.stl
src/my_robot_description/rviz/: cubic_doggo.urdf_config.rviz  my_robot.urdf_config.rviz
src/my_robot_description/urdf/: common_properties.xacro  cubic_doggo.ros2_control.xacro  cubic_doggo.urdf  cubic_doggo.urdf.xacro  cubic_doggo_leg.xacro  ma_robot.gazebo.xacro  ma_robot.ros2_control.xacro  ma_robot.urdf.xacro  ma_robot_arm.xacro  ma_robot_gripper.xacro  my_robot.gazebo.xacro  my_robot.ros2_control.xacro  my_robot.urdf.xacro  my_robot_leg.xacro  my_robot_leg_test.xacro
src/my_robot_firmware/: CMakeLists.txt  cubic_doggo_hardware_interface.xml  hardware_interface_ma_robot_dynamixel_u2d2_xl430.xml  ma_robot_hardware_interface.xml  my_robot_hardware_interface.xml  my_robot_hardware_interface_oneleg.xml  package.xml
src/my_robot_firmware/include/dynamixel_driver/: README.md
src/my_robot_firmware/include/my_robot_firmware/: hardware_interface_cubic_doggo_dynamixel_u2d2_xl430.hpp  hardware_interface_dynamixel_opencr1_oneleg_xl430.hpp  hardware_interface_ma_robot_dynamixel_u2d2_xl430.hpp  hardware_interface_my_robot_dynamixel_u2d2_xl430.hpp
src/my_robot_firmware/src/: hardware_interface_cubic_doggo_dynamixel_u2d2_xl430.cpp  hardware_interface_dynamixel_opencr1_oneleg_xl430.cpp  hardware_interface_ma_robot_dynamixel_u2d2_xl430.cpp  hardware_interface_my_robot_dynamixel_u2d2_xl430.cpp  testRaspPi5_dynamixel_opencr1_channel0_xl430.cpp  testRaspPi5_dynamixel_u2d2_channel0_xl430.cpp  testRaspPi5_dynamixel_u2d2_leg1swing_xl430.cpp  testRaspPi5_dynamixel_u2d2_leg1swipe_xl430.cpp
src/my_robot_interface/: CMakeLists.txt  package.xml
src/my_robot_interface/msg/: CubicDoggoLegPoseTarget.msg  MaRobotArmPoseTarget.msg  MyRobotLeg1PoseTarget.msg
src/my_robot_moveit_config/: .setup_assistant  package.xml
src/my_robot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  my_robot.ros2_control.xacro  my_robot.srdf  pilz_cartesian_limits.yaml  ros2_controllers.yaml
src/my_robot_moveit_config/launch/: move_group.launch.py
src/my_toolbox_dynamixel_workbench/: CMakeLists.txt  package.xml
