<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_commander</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tinglin194@gmail.com">kali</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>  
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>example_interfaces</depend>
  <depend>my_robot_interface</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>



